# SENTINEL-ZERO

./: .env.example  LICENSE.md  README.md  SETUP.md  config.py  main.py  ml_training.md  pyproject.toml  requirements.txt
agents/: patcher.py
api/: routes.py
database/: connection.py  schema.sql
ml_engine/: batch_train.py  merge_datasets.py  model.py  predict.py  test_predictor.py
modules/: intel_ingest.py  scanner.py
storage/: r2_client.py
utils/: crypto.py  logging.py  validators.py
